added backend logic

--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -14,6 +14,9 @@
     <button id="clearDataBtn">Clear Data</button>
     <textarea id="callScript" placeholder="Enter your call script here..."></textarea>
     <button id="initiateCallBtn">Initiate Call</button>
+    <button id="startCallBtn">Start Call</button>
+    <button id="stopCallBtn" disabled>Stop Call</button>
+    <div id="transcriptDisplay" class="contacts-display"></div>
     <div id="statusMsg" class="status-msg"></div>
   </div>
   <script src="popup.js"></script>
